# claude-code-session-tools

./: .gitignore  CHANGELOG.md  README.md  TODO.md  install-everything.sh  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
config/: hooks-bundle.json  session-tag-hook.json
data/: pricing.json
docs/: data-store-migration-backups.md  design.md  global-claude-md-bootstrap-prompt.md
docs/superpowers/plans/: 2026-05-10-ccx-improvements.md  2026-05-10-non-editable-install-ci-pypi.md  2026-05-16-scrub-pii-from-history.md  2026-05-17-claude-md-bootstrap-redesign.md  2026-06-17-last-screenshot-hook.md  2026-06-20-inter-session-messaging.md  2026-06-22-scheduled-tasks-catchup.md  2026-07-10-ccsched-auto-suspend.md  2026-07-13-data-store-uplift-00-overview.md  2026-07-13-data-store-uplift-01-shared-infra.md  2026-07-13-data-store-uplift-02-ccmsg.md  2026-07-13-data-store-uplift-03-ccsched.md  2026-07-13-data-store-uplift-04-sessions-db.md  2026-07-13-data-store-uplift-05-telemetry.md  2026-07-13-data-store-uplift-06-cache-flags.md  2026-07-13-data-store-uplift-07-cleanup-install.md
docs/superpowers/specs/: 2026-05-10-ccx-improvements-design.md  2026-05-10-non-editable-install-ci-pypi.md  2026-06-16-last-screenshot-hook-design.md  2026-06-20-inter-session-messaging-design.md  2026-06-22-scheduled-tasks-catchup-design.md  2026-07-08-ccsched-one-shot-future-dated-jobs.md
scripts/: generate_8digit_code.py  migrate_ccmsg_to_db.py  migrate_csv_to_db.py  migrate_fires_jsonl_to_telemetry_db.py
skills/analyse-cc-usage/: SKILL.md
skills/claude-usage/: SKILL.md
skills/delete-sessions/: SKILL.md
skills/delete-sessions/scripts/: delete_sessions.py
skills/delete-sessions/tests/: test_delete_sessions.py
skills/do-executor-critic-assessor-loop/: SKILL.md
skills/find-claude-code-session/: SKILL.md
skills/generate-8digit-code/: SKILL.md
skills/generate-8digit-code/scripts/: generate_8digit_code.py
skills/generate-8digit-code/tests/: test_generate_8digit_code.py
skills/list-empty-sessions/: SKILL.md
skills/list-empty-sessions/scripts/: list_empty_sessions.py
skills/list-empty-sessions/tests/: test_list_empty_sessions.py
skills/manage-recurring-cc-jobs-using-ccsched/: SKILL.md
skills/move-session/: SKILL.md
skills/move-session/hooks/: sessionstart-pending-rename.sh
skills/move-session/scripts/: cc_session_rules.py  move_session.py
skills/move-session/tests/: conftest.py  test_detection.py  test_hook.bats  test_integration.py  test_jsonl.py  test_messaging_safety.py  test_validators.py
skills/reduce-persistent-context/: CALIBRATION.md  SKILL.md
skills/reduce-persistent-context/scripts/: analyze_context.py  duplicates.py  measure.py  report.py  tokens.py  usage.py
skills/reduce-persistent-context/tests/: conftest.py  test_duplicates.py  test_measure.py  test_reduce_persistent_context_integration.py  test_reduce_persistent_context_report.py  test_tokens.py  test_usage.py
skills/reduce-persistent-context/tests/fixtures/: captured-context.txt
skills/select-agent-model/: SKILL.md
skills/send-session-message/: SKILL.md
skills/update-command-cache/: SKILL.md
skills/update-command-cache/scripts/: update_command_cache.py
skills/update-command-cache/tests/: test_update_command_cache.py
src/cc_session_tools/: __init__.py  hooks_install.py
src/cc_session_tools/cli/: ccd.py  ccmsg.py  ccr.py  ccs.py  ccsched.py  ccst.py  migrate_ccsched.py  migrate_session_tags.py  migrate_sessions_db.py
src/cc_session_tools/lib/: claude_flags.py  claude_md_install.py  db.py  debug.py  doctor.py  doctor_mutes.py  levenshtein.py  paths.py  picker.py  prompts.py  roots.py  rules.py  session_gc.py  sessions.py  sessions_db.py  shell_install.py  tasklist.py  telemetry_store.py
src/cc_session_tools/lib/messaging/: __init__.py  addressing.py  cursor.py  lock.py  (+8 more)
src/cccs_hooks/: after_response.py  bash_hard_deny.py  bash_security_review.py  cache.py  catchup.py  confirm_8digit.py  edit_write_audit.py  last_screenshot.py  marker_allow.py  markers.py  messaging_deliver.py  no_emdash.py  normalise.py  prompt_guard.py  session_end.py  session_tag.py  stats.py  telemetry.py  telemetry_query.py  telemetry_trim.py  transcript.py  worklog_guard.py
src/claude_code_usage/: __init__.py  attribution.py  cache.py  ccusage_wrapper.py  cli.py  parent_inference.py  parser.py  pricing.py  query.py  report.py  schema.py  session_names.py
tests/: conftest.py  test_after_response.py  test_attribution.py  test_bash_hard_deny.py  test_bash_security_review.py  test_cache.py  test_cache_sqlite.py  test_ccr_orphans.py  test_ccs_emptiness.py  test_ccs_eta.py  test_ccs_list_mode.py  test_ccs_scope_flags.py  test_ccs_sentinel_sort.py  test_ccs_session_counts.py  test_ccst_cli.py  test_ccst_doctor.py  test_ccst_gc_report.py  test_ccst_hook_dispatcher.py  test_ccst_hooks_install_zero_arg.py  test_ccst_hooks_uninstall.py  test_ccst_install_everything.py  test_ccst_sessions_cli.py  test_ccst_shell_install.py  test_ccst_skills_install.py  test_ccst_skills_uninstall.py  test_ccst_telemetry_query.py  test_ccst_telemetry_trim.py  test_ccusage_wrapper.py  test_claude_flags.py  test_claude_md_install.py  test_cli.py  test_cli_ccd.py  test_cli_ccd_dry_run.py  test_cli_ccr.py  test_cli_ccs.py  test_cli_version.py  test_confirm_8digit.py  test_db.py  test_debug.py  test_doctor_mutes.py  (+36 more)
tests/messaging/: test_addressing.py  test_ccmsg_cli.py  test_cursor.py  test_dead_letter.py  test_lock.py  test_message.py  test_messaging_deliver_hook.py  test_move_safety.py  test_repository.py  test_repository_race.py  test_retention.py  test_service.py  test_store.py  test_tag_lookup.py
tests/scheduler/: test_cadence.py  test_catchup_hook.py  test_ccsched_cli.py  test_cursor.py  test_digest.py  test_due.py  test_duration.py  test_jobspec.py  test_ledger.py  test_lock.py  test_notify.py  test_reconcile.py  test_registry.py  test_runner.py  test_state.py  test_store.py  test_surface.py  test_throttle.py  test_worker.py
(+23 files in other folders)
