[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-session-tools"
version = "0.9.0"
description = "Claude Code session management CLI tools (ccd, ccr, ccs, claude-code-usage, ccst) and hook library (cccs_hooks)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "raffishquartan" }]
keywords = ["claude-code", "cli", "session-management", "usage-analytics", "hooks"]
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "jsonschema>=4.21",
    "platformdirs>=4.0",
    "httpx>=0.27",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/raffishquartan/claude-code-session-tools"
Repository = "https://github.com/raffishquartan/claude-code-session-tools"
Issues = "https://github.com/raffishquartan/claude-code-session-tools/issues"

[project.scripts]
ccd = "cc_session_tools.cli.ccd:main"
ccr = "cc_session_tools.cli.ccr:main"
ccs = "cc_session_tools.cli.ccs:main"
claude-code-usage = "claude_code_usage.cli:main"
ccst = "cc_session_tools.cli.ccst:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "skills/move-session/tests"]
addopts = "-q"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=7",
    "pytest-mock>=3.12",
]
